#################################################
##########           Headers           ##########
#################################################
copper_include_protectors_HEADERS = exception_protector.hpp

copper_include_protectorsdir = $(includedir)/copper-0/copper/protectors
EXTRA_DIST = $(copper_include_protectors_HEADERS)

#################################################
##########        Source files         ##########
#################################################
noinst_LTLIBRARIES=libcu_protectors.la
libcu_protectors_la_SOURCES = exception_protector.cpp
