#################################################
##########           Headers           ##########
#################################################
copper_include_util_HEADERS = \
  formatters.hpp \
  list.hpp \
  string.hpp

copper_include_utildir = $(includedir)/copper-0/copper/util
EXTRA_DIST = $(copper_include_util_HEADERS)

#################################################
##########        Source files         ##########
#################################################
noinst_LTLIBRARIES=libcu_util.la
libcu_util_la_SOURCES = formatters.cpp string.cpp
