SUBDIRS = protectors util

copper_include_real_HEADERS = \
  assertion.hpp \
  assertion_result.hpp \
  assertions.hpp \
  compat.hpp \
  error.hpp \
  macros.hpp \
  output_handler.hpp \
  protector.hpp \
  suite.hpp \
  test.hpp

copper_include_realdir = $(includedir)/copper-0/copper
EXTRA_DIST = $(copper_include_real_HEADERS)
